...
            Hola, Bienvenido a la prueba de Tailor hub, en ella has de añadir
            los restaurantes favoritos donde te gustaría ir en tu onboarding.
          </Text>
          <Button
            variant="outline"
            className="mt-8 mx-4"
            label="Iniciar"
            onPress={handlePress}
          />
        </Animated.View>
      </View>
    </Layout>
  );
...
