...

enum LoginForm {
  LOGIN = 'login',
  SIGNUP = 'signup',
}

const LoginScreen: React.FC<LoginScreenProps> = () => {
  const { signUpUser, loginUser } = useAuth();

  const [form, setForm] = useState<LoginForm>(LoginForm.LOGIN);

  const onPressLink = () => {
    setForm(form === LoginForm.LOGIN ? LoginForm.SIGNUP : LoginForm.LOGIN);
...
